external-crates/move/crates/move-compiler/tests/move_2024/matching/string_literal_crash.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04038]: invalid string after type inference
  ┌─ tests/move_2024/matching/string_literal_crash.move:4:13
  │
4 │             "a" => {},
  │             ^^^ String literals are not currently supported in match patterns
